@@ -1020,7 +1020,7 @@ int ClassPickupMessages[CLASSCOUNT][SLOTCOUNT][MSGCOUNT] =
             "Shooting straight through two imps with a shotgun is normal!",
             "Don't ask how that finish has stayed there.",
             "150 damage is perfectly reasonable for a shotgun.",
-            "",
+            "Obviously it pneumatically launches the shell. Why else would it send them five miles?",
             "",
             "",
             "",
@@ -1033,7 +1033,7 @@ int ClassPickupMessages[CLASSCOUNT][SLOTCOUNT][MSGCOUNT] =
             "Remember that other classes get buffed with this addon.",
             "Now with magical disappearing pellets!",
             "You could blind someone with the sheen on this thing.",
-            "",
+            "I shot a cacodemon with this once. I never saw that cacodemon again.",
             "",
             "",
             "",
@@ -1054,10 +1054,10 @@ int ClassPickupMessages[CLASSCOUNT][SLOTCOUNT][MSGCOUNT] =
         {
             "You got the rocket launcher!",
             "It explodes! The explosions explode! We don't know why!",
-            "They will fear your extension ejaculations.",
+            "They will fear your explosive extension ejaculations.",
             "I can't fill hallways with rockets this gun sux ;_;",
-            "",
-            "",
+            "700 damage. One rocket. A bit much?",
+            "a+ perfect balance in every way",
             "",
             "",
             "",
