@@ -15,5 +15,6 @@ actor BURLEVERYONE: PowerDamage
 #include "decorate/BURL/slot2.dec"
 #include "decorate/BURL/slot3.dec"
 #include "decorate/BURL/slot4.dec"
+#include "decorate/BURL/slot5.dec"
 
 #include "decorate/BURL/unique.dec"
