@@ -1,0 +1,131 @@
+actor "RORKCT LANWCHR": RocketLauncher
+{
+    Weapon.SelectionOrder 4000
+    AttackSound "doomguy/rocklf"
+
+    Weapon.AmmoUse 2
+
+    states
+    {
+      Select:
+        DMIS A 0 A_Raise
+        DMIS A 1 A_Raise
+        loop
+
+      Deselect:
+        DMIS A 0 A_Lower
+        DMIS A 1 A_Lower
+        loop
+
+      Ready:
+        DMIS A 1 A_WeaponReady
+        loop
+        
+      Fire:
+        TNT1 A 0 A_JumpIfInventory("PowerBAHZERKER",1,"FireBERSERK")
+        DMIS B 8 A_GunFlash
+        DMIS B 0 Radius_Quake(4,15,0,1,0)
+        DMIS B 12 A_FireCustomMissile("BURLROCKET")
+        DMIS B 0 A_JumpIfInventory("RocketAmmo", 1, 1)
+        goto Ready
+        DMIS B 1 offset(0, 33)
+        DMIS B 1 offset(0, 35)
+        DMIS B 1 offset(0, 37)
+        DMIS B 1 offset(0, 39)
+        DMIS B 1 offset(0, 41)
+        DMIS B 10
+        DMIS B 1 offset(0, 41)
+        DMIS B 1 offset(0, 39)
+        DMIS B 1 offset(0, 37)
+        DMIS B 1 offset(0, 35)
+        DMIS B 1 offset(0, 33)
+        DMIS A 0 offset(0, 33) A_ReFire
+        goto Ready
+
+      FireBERSERK:
+        DMIS B 7 A_GunFlash
+        DMIS B 0 Radius_Quake(4,15,0,1,0)
+        DMIS B 9 A_FireCustomMissile("BURLROCKET")
+        DMIS B 0 A_JumpIfInventory("RocketAmmo", 1, 1)
+        goto Ready
+        DMIS B 1 offset(0, 34)
+        DMIS B 1 offset(0, 38)
+        DMIS B 1 offset(0, 40)
+        DMIS B 1 offset(0, 43)
+        DMIS B 7
+        DMIS B 1 offset(0, 41)
+        DMIS B 1 offset(0, 38)
+        DMIS B 1 offset(0, 35)
+        DMIS B 1 offset(0, 33)
+        DMIS A 0 offset(0, 33) A_ReFire
+        goto Ready
+
+      Flash:
+        DMSF A 3 bright A_Light1
+        DMSF B 2 bright
+        DMSF C 2 bright A_Light2
+        DMSF DE 3 bright
+        Goto LightDone
+    }
+}
+
+actor BURLROCKET: Rocket
+{
+    speed 40
+    Species "Rockit"
+    +THRUSPECIES
+    +EXTREMEDEATH
+    states
+    {
+      Death:
+        TNT1 A 0 A_SpawnItemEx("BURLEXPLOSION")
+        stop
+    }
+}
+
+actor BURLEXPLOSION
+{
+    +NOGRAVITY
+    +FORCERADIUSDMG
+    +EXTREMEDEATH
+    vspeed 0
+    alpha 1.0
+    seesound "doomguy/rocklx"
+    renderstyle add
+    damagetype "Explosion"
+    states
+    {
+      Spawn:
+        TNT1 A 0 A_PlaySound("doomguy/rocklx")
+        TNT1 A 0 A_Explode
+        TNT1 A 4 A_SpawnItemEx("BURLEXPLOSION2", random(-16,16), random(-16,16), random(-16,16), 0, 0, 0)
+        TNT1 A 0 A_PlaySound("doomguy/rocklx")
+        TNT1 A 0 A_Explode
+        TNT1 A 4 A_SpawnItemEx("BURLEXPLOSION2", random(-16,16), random(-16,16), random(-16,16), 0, 0, 0)
+        TNT1 A 0 A_PlaySound("doomguy/rocklx")
+        TNT1 A 0 A_Explode
+        TNT1 A 4 A_SpawnItemEx("BURLEXPLOSION2", random(-16,16), random(-16,16), random(-16,16), 0, 0, 0)
+        TNT1 A 0 A_PlaySound("doomguy/rocklx")
+        TNT1 A 0 A_Explode		
+        TNT1 A 4 A_SpawnItemEx("BURLEXPLOSION2", random(-16,16), random(-16,16), random(-16,16), 0, 0, 0)
+        TNT1 A 0 A_PlaySound("doomguy/rocklx")
+        TNT1 A 0 A_Explode
+        TNT1 A 4 A_SpawnItemEx("BURLEXPLOSION2", random(-16,16), random(-16,16), random(-16,16), 0, 0, 0)
+        TNT1 A 0 A_PlaySound("doomguy/rocklx")
+        stop
+    }
+}
+
+actor BURLEXPLOSION2 : BURLEXPLOSION
+{
+    +clientsideonly
+    states
+    {
+      Spawn:
+        TNT1 A 0 Radius_Quake(3, 12, 0, 4,0)
+        MISL B 6 bright 
+        MISL C 4 bright 
+        MISL D 2 bright 
+        stop
+    }
+}
